# MIRU_XR

./: .gitignore  CMakeLists.txt  MIRU_XR.sln  README.md  Redistributions.txt
MIRU_XR_CORE/: CMakeLists.txt  MIRU_XR_CORE.vcxproj  MIRU_XR_CORE.vcxproj.filters
MIRU_XR_CORE/src/: XRActions.cpp  XRActions.h  XRCompositionLayers.h  XRInstance.cpp  XRInstance.h  XRSession.cpp  XRSession.h  XRSpace.cpp  XRSpace.h  XRSwapchain.cpp  XRSwapchain.h  XRSystem.cpp  XRSystem.h  XRViewConfigurations.cpp  XRViewConfigurations.h  miru_xr_core.h  miru_xr_core_common.cpp  miru_xr_core_common.h
MIRU_XR_TEST/: CMakeLists.txt  MIRU_XR_TEST.vcxproj
MIRU_XR_TEST/res/shaders/: basic.hlsl  basic_hlsl.json
MIRU_XR_TEST/src/: main.cpp
